server/deployment/prod/prod-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: prod-deployment
spec:
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
        - name: prod-group-video-chat
          image: gcr.io/group-video-chat/prod-group-video-chat
          resources:
            limits:
              memory: "2000Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: prod-service
spec:
  type: ClusterIP
  selector:
    app: prod
  ports:
    - port: 3000
      name: prod
      protocol: TCP
      targetPort: 8080
